[package]
name = "config-env"
version = "0.1.0"
authors = ["Noah Masur <noahmasur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
reqwest = "0.10.6"
rusoto_core = "0.44.0"
tokio = "0.2.21"
